# minislam

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Makefile  README.md  camera.py  config.ini  config.yaml  dataset.py  display.py  display2d.py  display3d.py  feature_manager.py  helpers.py  lint.sh  main.py  pyproject.toml  requirements.txt  ruff.toml  run.sh  slam.py  visual_odometry.py
.github/workflows/: ci.yaml  ci.yml
examples/: main.py
minislam/: camera.py  dataset.py  display2d.py  display3d.py  feature_manager.py  main.py  util.py  visual_odometry.py
scripts/: install_pangolin.sh
src/minislam/: camera.py  dataset.py  display.py  display2d.py  display3d.py  features.py  loop_closure.py  main.py  odometry.py  util.py
